--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher"
         android:largeHeap="true"
+        android:name="android.support.multidex.MultiDexApplication"
         android:theme="@style/AppTheme">
         <activity
             android:name="com.whiteandc.capture.MonumentsActivity"
